obrigatório quase concluído

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <section id="showcase">
                     <ul id="card-list">
                         <!-- cada li representa um card -->
-                        <li class="card">
+                        <!-- <li class="card">
                             <img src="./img/camiseta_branca.svg" alt="Camiseta Branca" class="card-img">
                             <span class="card-category">Camisetas</span>
                             <span class="card-title">Lightweight Jacket</span>
@@ -96,7 +96,7 @@
                                 jaqueta vibrante...</span>
                             <span class="card-price">R$ 100.00</span>
                             <span class="addToCart">Adicionar ao carrinho</span>
-                        </li>
+                        </li> -->
                     </ul>
                 </section>
             </main>
@@ -111,7 +111,7 @@
                 <div id="cart">
                     <span class="cart-general-title">Carrinho de compras</span>
                     <ul id="cart-list">
-                        <li class="cart-item">
+                        <!-- <li class="cart-item">
                             <div class="cart-list-part1">
                                 <img src="./img/camiseta_branca.svg" alt="Camiseta Branca" class="cart-img">
                             </div>
@@ -150,16 +150,16 @@
                                 <span class="cart-price">R$ 100.00</span>
                                 <span class="removeFromCart">Remover produto</span>
                             </div>
-                        </li>
+                        </li> -->
                     </ul>
                     <div id="cart-tail">
                         <div class="cart-tail-part">
                             <span>Quantidade:</span>
-                            <span>3</span>
+                            <span id="cart-quantity">3</span>
                         </div>
                         <div class="cart-tail-part">
                             <span>Total:</span>
-                            <span>R$ 200,00</span>
+                            <span id="cart-value">R$ 200,00</span>
                         </div>
                     </div>
                 </div>
