--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div id="content-all">
             <main id="content-main">
                 <section id="showcase">
-                    <ul id="card-list">
+                    <ul id="card-list">                       
                         <!-- cada li representa um card -->
                         <!-- <li class="card">
                             <img src="./img/camiseta_branca.svg" alt="Camiseta Branca" class="card-img">
@@ -105,7 +105,7 @@
 
                 <div id="cart-search">
                     <input type="text" id="search" placeholder="Digite aqui sua pesquisa" value="">
-                    <button type="button" class="button-search">Pesquisar</button>
+                    <button type="button" id="button-search">Pesquisar</button>
                 </div>
 
                 <div id="cart">
