update de detalhes

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             <nav id="menu-nav">
                 <ul>
                     <!-- não usei âncora pois vou usar eventos no JS -->
-                    <li>Todos</li>
-                    <li>Acessórios</li>
-                    <li>Calçados</li>
-                    <li>Camisetas</li>
+                    <li id="tagAll" class="bold">Todos</li>
+                    <li id="tagAcessory">Acessórios</li>
+                    <li id="tagShoes">Calçados</li>
+                    <li id="tagShirts">Camisetas</li>
                 </ul>
             </nav>
         </div>
