--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
 
             <aside>
                 <div id="cart-search">
-                    <input type="text" id="search" placeholder="Digite aqui sua pesquisa" value="">
-                    <button type="button" id="button-search">Pesquisar</button>
+                    <form>
+                        <input type="text" id="search" placeholder="Digite aqui sua pesquisa" value="">
+                        <button type="button" id="button-search">Pesquisar</button>
+                    </form>
                 </div>
                 <div id="cart">
                     <span class="cart-general-title">Carrinho de compras</span>
@@ -59,8 +61,10 @@
                             <span id="cart-quantity">3</span>
                         </div>
                         <div class="cart-tail-part">
-                            <input type="text" id="coupon" placeholder="Digite aqui seu cupom">
-                            <button id="button-coupon" type="button">Aplicar</button>
+                            <form>
+                                <input type="text" id="coupon" placeholder="Digite aqui seu cupom">
+                                <button id="button-coupon" type="button">Aplicar</button>
+                            </form>
                         </div>
                         <div class="cart-tail-part">
                             <span>Total:</span>
@@ -77,6 +81,7 @@
 
     </div>
 
+    <!-- criei aqui só para não perder o costume -->
     <footer></footer>
 
     </div>
