--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;700;900&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
     <script src="./js/database.js" defer></script>
     <script src="./js/index.js" defer></script>
@@ -46,7 +47,7 @@
 
             <aside>
                 <div id="cart-search">
-                    <form>
+                    <form action="#" id="form-search">
                         <input type="text" id="search" placeholder="Digite aqui sua pesquisa" value="">
                         <button type="button" id="button-search">Pesquisar</button>
                     </form>
@@ -61,7 +62,7 @@
                             <span id="cart-quantity">3</span>
                         </div>
                         <div class="cart-tail-part">
-                            <form>
+                            <form action="#" id="form-coupon">
                                 <input type="text" id="coupon" placeholder="Digite aqui seu cupom">
                                 <button id="button-coupon" type="button">Aplicar</button>
                             </form>
